--- a/Ex04-LineSelection.Rmd
+++ b/Ex04-LineSelection.Rmd
@@ -2,7 +2,7 @@
 
 **Цель задания** --- освоение методики отбора элементов транспортных сетей с использованием алгоритмов на графах
 
-**Аннотация**. Задание посвящено знакомству с методикой автоматизированного отбора дорог для мелкомасштабного картографирования. Необходимо реализовать алгоритм прореживания транспортной сети (отбора линий), основанный  на принципе маршрутной связности населенных пунктов. Дополнительно реализуется расчет условной графической нагрузки для линий. Задание выполняется путем разработки инструмента геообработки Python Toolbox с модулем _Network Analyst_ (`arcpy.na`).
+**Аннотация**. Задание посвящено знакомству с методикой автоматизированного отбора дорог для мелкомасштабного картографирования. Необходимо реализовать алгоритм прореживания транспортной сети (отбора линий), основанный  на принципе маршрутной связности населенных пунктов. Дополнительно реализуется расчет условной графической нагрузки для линий. Задание выполняется с примененим библиотек `osmnx`, `networkx` и `geopandas`.
 
 Предлагаемый для реализации алгоритм основан на предположении, что в результирующем масштабе необходимо показывать транспортные пути, по которым проходят кратчайшие маршруты между соседними населенными пунктами. Понятие соседства при решении этой задачи может быть формализовано разоличными способами: по количеству [@krivosheina:2012], либо по смежности [@Schmid:2013wh]. В настоящей работе используется соседство по смежности: соседними считаются населенные пункты, у которых соприкасаются ячейки Вороного. Общая схема алгоритма выглядит следующим обазом:
 
@@ -13,7 +13,7 @@
     - выбирается относящаяся к текущей точке ячейка Вороного;
     - для выбранной ячейки выбираются смежные с ней (касающиеся по границе);
     - выбираются соответствующие соседним ячейкам точки населенных пунктов;
-    - от каждой соседней точки строится маршрут до центральной точки (решается задача _Closest Facility_)
+    - от каждой соседней точки строится маршрут до центральной точки
     - линии, по которым прошли маршруты, помечаются флагом.
     
 В результате выполнения алгоритма все транспортные пути, которые оказались задействованы в кратчайших маршрутах, будут помечены специальным флагом. Генерализация завершается исключением непомеченных линий (физическое удаление не требуется, достаточно выполнить атрибутивный запрос).
@@ -22,78 +22,41 @@
 
 0. Выберите регион для выполнения задания и скопируйте себе соответствующую базу данных из архива приложенного к данному заданию.
 
-1. Добавьте в исходный слой линий (`rdslin`) целочисленное поле *Show*, которое будет заполняться флагом отбора.
+1. Добавьте в исходный слой линий (`rdslin`) целочисленное поле `select`, которое будет заполняться флагом отбора (0/1).
 
-2. Добавьте в исходный слой населенных пунктов (`poppnt`) целочисленное статуса *Status*, которое будет хранить роль населенного пункта в процессе отбора элементов транспортной сети. Заполните это поле следующим образом: единица ($1$) должна стоять у населенных пунктов, располагающихся внутри выбранного субъекта и имеющих статус не ниже райцентра, двойка ($2$) должна стоять у всех населенных пунктов, располагающихся за пределами субъекта. Все остальные населенные пункты (располагающиеся внутри субъекта, но имеющие статус ниже райцентра) должны иметь значение $0$. 
+2. Создайте в слое дорог новое поле *highway* и заполните его значениями:
+    - `'primary'` — для автомагистралей и усовершенствованных шоссе (`CLASS_ID = 62110000, 62121000`)
+    - `'secondary'` — для шоссе (`CLASS_ID = 62122000`)
+    - `'tertiary'` — для всех прочих дорог
+    
+    Это нужно для того чтобы последующий механизм маршрутизации мог отдавать больший приоритет более крупным дорогам. 
 
-2. Создайте набор пространственных объектов (**Feature Dataset**) внутри базы геоданных и импортируйте в него слой дорожной сети.
+3. Сконвертируйте полученный набор линий в формат _OSM XML_, используя __JOSM__ или __ogr2osm__.
 
-3. Создайте в слое дорог новое целочисленное поле *Hierarchy* и заполните его значениями:
-    - 1 — для автомагистралей и усовершенствованных шоссе
-    - 2 — для шоссе
-    - 3 — для всех прочих дорог
-
-4. Внутри набора пространственных объектов создайте набор сетевых данных (*Network Dataset*), используя слой _rdslin_. Все параметры оставьте по умолчанию, за исключением:
-    - *Elevation Fields* --- None
-    - *Driving Directions* --- None
-    - *Attributes*: добавить новый атрибут типа *Hierarchy* (**Add**). Далее добавить для него оценщика (**Evaluators**), указать, что оценку необходимо делать по полю **Hierarchy**.
-
-## Часть 2. Создание инструмента геообработки Python Toolbox для отбора элементов транспортной сети {-}
+## Часть 2. Создание скрипта для отбора элементов транспортной сети {-}
 
 В качестве входных данных необходимо предусмотреть 5 слоев:
 
- - исходные точки (**Input Points**),
- - исходные линии (**Input Lines**),
- - набор сетевых данных (**Input Network Dataset**)
- - поле статуса (**Status Field**)
- - поле видимости (**Show Field**)
+ - точки населенных пунктов,
+ - линии дорог в формате OSM XML,
+ - линии дорог в геореляционном формате,
+ - поле флага отбора
  
-По результатам выполнения инструмента в поле **Show Field** должно быть проставлено значение $1$ для отобранных линий. Все остальные линии должны иметь значение $0$. 
-Реализуйте скрипт геообработки в соответствии со следующей последовательностью действий:
+По результатам выполнения скрипта в поле **Show Field** должно быть проставлено значение $1$ для отобранных линий. Все остальные линии должны иметь значение $0$. 
 
-1. Создать слой линий (**Create Feature Layer**).
+Базовый алгоритм для построения одного маршрута следующий:
 
-1. Создать слой точек (**Create Feature Layer**), оставив в нем только точки, со статусом выше $0$ (используйте параметр `where_clause`)
+1. Постройте граф из файла OSM XML (`ox.graph_from_xml`)
+2. Определите для населенных пунктов ближайшие к ним вершины графа (`ox.nearest_nodes`)
+3. Постройте между ними маршрут (`ox.shortest_path`)
+4. Получите подграф, соответствующий маршруту (`nx.subgraph`)
+5. Экспортируйте подграф в фрейм данных (`ox.graph_to_gdfs`)
+6. Объедините геометрический столбец фрейма в один мультиобъект и буферизуйте его на малую величину (`gdf.geometry.unary_union.buffer(1e-9)`)
+7. Отберите дороги по правилу нахождения внутри полученного буфера (`within`) и вычислите им `select = 1`.
 
-1. Создать диаграмму Вороного для полученного слоя точек (**Create Thiessen Polygons**). Разместите диаграмму в памяти компьютера (`in_memory\voronoy`).
+После того как базовый алгоритм запрограммирован, адаптируйте его к методике отбора с учетом необходимости построения маршрутов до ближайших населенных пунктов.
 
-1. Создать слой диаграммы Вороного (**Create Feature Layer**).
-
-1. Создать поисковый курсор (`rows = arcpy.da.SearchCursor(...)`) для последовательного обхода ячеек диаграммы Вороного (1), оставив в нем только поле статуса и поле геометрии.
-
-1. Организовать цикл по строкам созданного курсора (`for row in rows:`). Все дальнейшие операции выполняются внутри цикла.
-
-1. Если текущая ячейка имеет статус $2$, перейти на следующую итерацию цикла.
-
-1. Создать на основе сетевого набора данных слой поиска ближайших пунктов обслуживания (**Make Closest Facility Layer**). В качестве параметра *Number of Facilities to Find* оставьте 1. Установите режим движения `TRAVEL_FROM`.
-
-1. Выбрать точку населенного пункта геометрией объекта текущей строки курсора (`row[1]`, если геометрическое поле указано вторым по порядку), используя правило `WITHIN` (**Select By Location**).
-
-1. Добавить в слой поиска выбранную точку (**Add Locations** в режиме *Facilities*).
-
-1. Выбрать с помощью геометрии текущего полигона (`row[1]`) его соседей, используя правило  (**Select By Location**).
-
-1. Выбрать в слое точек с помощью выбранных полигонов, используя правило INTERSECT (**Select By Location**).
-
-1. Добавить в слой поиска ближайших пунктов обслуживания точки соседей (**Add Locations** в режиме *Incidents*)
-
-1. Очистить выборку в слое диаграммы Вороного (**Select By Attributes** в режиме `CLEAR\_SELECTION`).
-
-1. Очистить выборку в слое точек (**Select By Attributes** в режиме `CLEAR\_SELECTION`).
-
-1. Запустить расчет задачи *Closest Facility* (**Solve**)
-
-1. Извлечь линии маршрутов *Routes* (**Select Data**) из полученного слоя.
-
-1. Выбрать линии в слое дорог маршрутами (**Select By Location**), используя правило `SHARE_A_LINE_SEGMENT_WITH`.
-
-1. Вычислить поле *Show Field* для выбранных линий 2, используя калькулятор поля (**Calculate Field**). Проставить выделенным линиям значение 1.
-
-1. Очистить выборку в слое линий. (**Select By Attributes** в режиме `CLEAR_SELECTION`).
-
-1. Удалить слой *Closest Facility* (**Delete**).
-
-## Часть 3. Создание инструента Python Toolbox для оценки относительной графической нагрузки по линейным объектам {-}
+## Часть 3. Создание скрипта для оценки относительной графической нагрузки по линейным объектам {-}
 
 Используя имеющиеся у вас знания и навыки, создайте скрипт Python Toolbox, который будет давать оценку относительной графической нагрузки для линейных объектов по ячейкам регулярной сети.
 
@@ -102,20 +65,11 @@
 $$\rho_{L} = \frac{\sum_{k}^{}{w_{k}L_{k}}}{A}$$
 Числитель формулы имеет единицы измерения [на местности]{.underline} (км). Знаменатель выражен в единицах измерения [карты]{.underline} ($см^2$). Применительно к линейным объектам относительная графическая нагрузка является аналогом густоты, и также выражается в относительных единицах ($км/см^2$), но учитывает толщину линий в качестве весовых коэффициентов $w$, чтобы придать большую нагрузку ячейкам, где проходят линии высоких классов. Веса $w$ должны быть прямо пропорциональны толщинам линий (или равны им).
 
-**Входные параметры:**
-
-- Линейный слой
-- Поле *Size Field*, отвечающее за графический вес линии (толщина линии в миллиметрах).
-- Пространственное разрешение сетки (в сантиметрах изображения).
-- Масштаб изображения
-
-**Требования к результату:**
-
-Результатом выполнения инструмента должен быть полигональный слой c ячейками регулярной сети, для каждой из которой в поле *Load* записана относительная графическая нагрузка, рассчитанная по вышеприведенной формуле.
+Результатом выполнения инструмента должен быть полигональный слой c ячейками регулярной сети, для каждой из которой в некоторое поле записана относительная графическая нагрузка, рассчитанная по вышеприведенной формуле.
 
 **Указания к выполнению:**
 
-В качестве отправной точки можно использовать инструмент геообработки для оценки относительной графической нагрузки точечных объектов, разработанный вами в Самостоятельной работе №1. В процессе экспериментальной работы используйте следующие толщины линий (в пикселах):
+В качестве отправной точки можно использовать скрипт для оценки относительной графической нагрузки точечных объектов, разработанный вами в Самостоятельной работе №1. В процессе экспериментальной работы используйте следующие толщины линий (в пикселах):
 
 ```{r, echo = FALSE}
 knitr::kable(readxl::read_excel('tables/linewidth_params.xlsx'), caption = 'Параметры толщины линии')
@@ -125,15 +79,15 @@ knitr::kable(readxl::read_excel('tables/linewidth_params.xlsx'), caption = 'Па
 
 Используя разработанные инструменты отбора и оценки графической нагрузки, выполните заключительную часть работы:
 
-1. Выполните отбор элементов дорожной сети, проходящих через районные центры выбранного субъекта. Оформите результат в виде карты масштаба 1:8 000 000. Используйте толщины линий 3, 1.5 и 0.75 пункта соответственно. На схеме должны быть подписаны все районные центры внутри и за пределами субъекта, нанесена граница субъекта и оформлена легенда по трем классам дорог.
+1. Выполните отбор элементов дорожной сети, проходящих через районные центры выбранного субъекта. Оформите результат в виде карты масштаба 1:6 000 000. Используйте толщины линий 2, 1 и 0.5 мм соответственно. На схеме должны быть подписаны все районные центры внутри и за пределами субъекта, нанесена граница субъекта и оформлена легенда по трем классам дорог.
 
-2. Вычислите условную графическую нагрузку [всех]{.underline} исходных дорог в масштабе 1:1 000 000 (размер квадрата 2х2 см в масштабе карты). Используйте толщины линий 6, 3 и 1.5 пункта соответственно. Оформите картограмму графической нагрузки в масштабе 1:8 000 000.
+2. Вычислите условную графическую нагрузку [всех]{.underline} исходных дорог в масштабе 1:1 000 000 (размер квадрата 2х2 см в масштабе карты). Используйте толщины линий 4, 2 и 1 мм соответственно. Оформите картограмму графической нагрузки в масштабе 1:6 000 000.
 
-3. Вычислите условную графическую нагрузку отобранных дорог в масштабе 1:8 000 000 (размер квадрата 2х2 см в масштабе карты). Используйте толщины линий 3, 1.5 и 0.75 пункта соответственно. Оформите картограмму графической нагрузки в масштабе 1:8 000 000.
+3. Вычислите условную графическую нагрузку отобранных дорог в масштабе 1:6 000 000 (размер квадрата 2х2 см в масштабе карты). Используйте толщины линий 2, 1 и 0,5 мм соответственно. Оформите картограмму графической нагрузки в масштабе 1:6 000 000.
 
 4. Напишите отчет о проделанной работе, включающий:
     - Описание целей и задач самостоятельной работы
     - Описание идеи алгоритмов отбора элементов дорожной сети и оценки условной графической нагрузки для линейных объектов
-    - Процесс создания инструментов геообработки и их внешний вид
+    - Процесс создания скриптов и их внешний вид
     - Процесс экспериментальной работы
     - Оценку полученных результатов с точки зрения географической достоверности. Оценка должна включать сравнение исходной и результирующей картины транспортной сети региона визуально и по картограмме условной графической нагрузки. 
