upd network sel

--- a/Ex04-LineSelection.Rmd
+++ b/Ex04-LineSelection.Rmd
@@ -22,16 +22,18 @@
 
 0. Выберите регион для выполнения задания и скопируйте себе соответствующую базу данных из архива приложенного к данному заданию.
 
-1. Добавьте в исходный слой линий (`rdslin`) целочисленное поле `select`, которое будет заполняться флагом отбора (0/1).
+1. Добавьте в исходный слой населенных пунктов (`poppnt`) целочисленное статуса *status*, которое будет хранить роль населенного пункта в процессе отбора элементов транспортной сети. Заполните это поле следующим образом: двойка ($2$) должна стоять у населенных пунктов, располагающихся внутри выбранного субъекта и имеющих статус не ниже райцентра, единица ($1$) должна стоять у всех населенных пунктов, располагающихся за пределами субъекта. Все остальные населенные пункты (располагающиеся внутри субъекта, но имеющие статус ниже райцентра) должны иметь значение $0$. 
 
-2. Создайте в слое дорог новое поле *highway* и заполните его значениями:
+2. Добавьте в исходный слой линий (`rdslin`) целочисленное поле `select`, которое будет заполняться флагом отбора (0/1).
+
+3. Создайте в слое дорог новое поле *highway* и заполните его значениями:
     - `'primary'` — для автомагистралей и усовершенствованных шоссе (`CLASS_ID = 62110000, 62121000`)
     - `'secondary'` — для шоссе (`CLASS_ID = 62122000`)
     - `'tertiary'` — для всех прочих дорог
     
     Это нужно для того чтобы последующий механизм маршрутизации мог отдавать больший приоритет более крупным дорогам. 
 
-3. Сконвертируйте полученный набор линий в формат _OSM XML_, используя __JOSM__ или __ogr2osm__.
+4. Сконвертируйте полученный набор линий в формат _OSM XML_, используя __JOSM__ или __ogr2osm__.
 
 ## Часть 2. Создание скрипта для отбора элементов транспортной сети {-}
 
@@ -54,7 +56,7 @@
 6. Объедините геометрический столбец фрейма в один мультиобъект и буферизуйте его на малую величину (`gdf.geometry.unary_union.buffer(1e-9)`)
 7. Отберите дороги по правилу нахождения внутри полученного буфера (`within`) и вычислите им `select = 1`.
 
-После того как базовый алгоритм запрограммирован, адаптируйте его к методике отбора с учетом необходимости построения маршрутов до ближайших населенных пунктов.
+После того как базовый алгоритм запрограммирован, адаптируйте его к методике отбора с учетом необходимости построения маршрутов до ближайших населенных пунктов. В построении маршрута должны участвовать все точки со статусом выше 0.
 
 ## Часть 3. Создание скрипта для оценки относительной графической нагрузки по линейным объектам {-}
 
